# nitro_assignment

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
CMakeModules/: config.cmake
scripts/: genreport.sh
src/: CMakeLists.txt
src/include/: rectangles.hpp
src/include/nitro/: exceptions.hpp  fwd.hpp  geometry.hpp  io.hpp  memory_resource.hpp  nitro.hpp  partition_tree.hpp  rectangle.hpp  sorting_and_orientation.hpp  types.hpp  utils.hpp
src/lib/: geometry.cpp  io.cpp  partition_tree.cpp  rectangle.cpp  sorting_and_orientation.cpp
test/: CMakeLists.txt
test/data/: expected.txt
test/src/: functional.py  test_geometry.cpp  test_partition_tree.cpp  test_rectangle.cpp  test_utils.hpp  unit.cpp
